# resume-career-agent

./: .gitignore  .privacy-denylist.example  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: claude-code.yaml  codex.yaml  openai.yaml  opencode.yaml
configs/: jd_keywords.json  lint_rules.json  privacy_rules.json  profile_schema.json
examples/: README.md  jd_agent_engineer.example.txt  jd_agent_engineer.txt  jd_ai_infra.example.txt  jd_ai_infra.txt  jd_backend_platform.example.txt  jd_cloudops_engineer.example.txt  jd_cloudops_engineer.txt  usage_interview_prep.md  usage_jd_tailor.md  usage_private_profile.md  usage_resume_audit.md
references/: INDEX.md  agent-engineer-resume-rubric.md  ai-infra-resume-rubric.md  ats-checklist.md  audit-checklist.md  backend-platform-resume-rubric.md  bilingual-style-guide.md  cloudops-resume-rubric.md  interview-question-bank.md  jd-keyword-map.md  narrative-tools.md  no-fabrication-policy.md  one-page-resume.md  output-quality-gate.md  privacy-policy.md  red-flags.md  tech-resume-rubric.md
scripts/: _utils.py  extract_jd_keywords.py  init_private_profile.py  lint_resume.py  package_skill.py  pdf_page_count.py  pdf_to_images.py  privacy_guard.py  render_docx.py  render_pdf.py  score_project_match.py  smoke_check.py  validate_profile.py
templates/: changes_plan.md  cover_letter_en.md  cover_letter_zh.md  interview_prep_pack.md  jd_match_report.md  missing_info_checklist.md  pitch_script_bilingual.md  project_asset.md  recruiter_message_en.md  recruiter_message_zh.md  resume_audit_report.md  resume_base.md  self_profile.md  (+4 more)
(+18 files in other folders)
