[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "resume-career-agent"
version = "1.0.0"
description = "Privacy-safe technical resume and career skill for agent-based resume audit, JD tailoring, ATS optimization, and interview preparation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
